SERVER-113069 Block geoNear queries from running with an invalid hinted index (#43286)

GitOrigin-RevId: 2a4599c42997b139b1c2e2791c640e73500681cf